# InIBP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: 1.yaml  14.yaml  4.yaml  44.yaml  box.yaml  boxS.yaml  dbox.yaml  rank.yaml  sunrise.yaml  tennis.yaml  topoA.yaml
lib/arith/: CMakeLists.txt  umod.cpp  umod.h
lib/poly/: CMakeLists.txt
src/: equation.cpp  equation.h  family.cpp  family.h  inibp.cpp  inibp.h  main.cpp  sector.cpp  sector.h  utils.h
